fixed password visibility button

--- a/frontend/src/app/authentication/login/login.component.scss
+++ b/frontend/src/app/authentication/login/login.component.scss
@@ -14,9 +14,3 @@ form {
 mat-form-field {
   width: 25rem;
 }
-
-/* specific chrome pseudo-selector */
-//noinspection CssInvalidPseudoSelector
-input:-internal-autofill-selected {
-  background-color: inherit !important;
-}
