--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,3 +5,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; font-size: 16px; }
 h1 { font: var(--mat-sys-headline-large); color: var(--mat-sys-primary); }
+
+
+/* specific chrome pseudo-selector */
+//noinspection CssInvalidPseudoSelector
+input:-internal-autofill-selected {
+  background-color: transparent !important;
+}
